--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -240,24 +240,6 @@
 				<key>layout-id</key>
 				<data>AQAAAA==</data>
 			</dict>
-			<key>PciRoot(0x0)/Pci(0x1F,0x6)</key>
-			<dict>
-				<key>AAPL,slot-name</key>
-				<string>Internal@0,31,6</string>
-				<key>device_type</key>
-				<string>Ethernet controller</string>
-				<key>model</key>
-				<string>Ethernet Connection (12) I219-V</string>
-			</dict>
-			<key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
-			<dict>
-				<key>AAPL,slot-name</key>
-				<string>Internal@0,31,3</string>
-				<key>layout-id</key>
-				<data>MgAAAA==</data>
-				<key>model</key>
-				<string>Realtek ALCS1200A</string>
-			</dict>
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key>AAPL,ig-platform-id</key>
@@ -989,7 +971,7 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>M0000000000000001</string>
+			<string>C02021404J9PHCDCB</string>
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
@@ -999,11 +981,11 @@
 			<key>SystemMemoryStatus</key>
 			<string>Auto</string>
 			<key>SystemProductName</key>
-			<string>iMac19,1</string>
+			<string>iMac20,1</string>
 			<key>SystemSerialNumber</key>
-			<string>W00000000001</string>
+			<string>C02CRTZDPN5T</string>
 			<key>SystemUUID</key>
-			<string>00000000-0000-0000-0000-000000000000</string>
+			<string>1F182877-A18F-4359-B5B5-D6BA4F5CF6A4</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
@@ -1060,8 +1042,6 @@
 			<integer>0</integer>
 			<key>AudioSupport</key>
 			<false/>
-			<key>MinimumVolume</key>
-			<integer>1</integer>
 			<key>PlayChime</key>
 			<string>Auto</string>
 			<key>ResetTrafficClass</key>
@@ -1070,6 +1050,8 @@
 			<integer>0</integer>
 			<key>VolumeAmplifier</key>
 			<integer>0</integer>
+			<key>MinimumVolume</key>
+			<integer>1</integer>
 		</dict>
 		<key>ConnectDrivers</key>
 		<true/>
